@@ -1,3 +1,8 @@
+n/a - July 21, 2004
+
+	* Committed DJ Lucas's patch for the killproc function.  It no longer requires
+	  arguments if PIDFILE is set
+
 n/a - July 13, 2004
 
 	* Added the PEER variable to the ifconfig.*/* file, done by Kevin P. Fleming
